增加异常类。
Change-Id: Ic99ea58d6ad25f509daa77a0dd4b5e2ded2f1c5f
Signed-off-by: joel <joel@joel>